<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AdminStats</class>
 <widget class="QMainWindow" name="AdminStats">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="title">
      <property name="text">
       <string>Thống kê</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="revenue_label">
      <property name="text">
       <string>Doanh thu tháng: 0 VND</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="orders_label">
      <property name="text">
       <string>Số đơn hàng: 0</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="top_customers_label">
      <property name="text">
       <string>Top khách hàng:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QTableWidget" name="customers_table">
      <column>
       <property name="text">
        <string>Tên khách hàng</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Tổng chi tiêu</string>
       </property>
      </column>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="refresh_btn">
        <property name="text">
         <string>Làm mới</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="back_btn">
        <property name="text">
         <string>Quay lại</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
 </widget>
</ui> 